TransportServer, MessageFlow refactoring